# contextkernel

./: .gitignore  Cargo.toml  README.md
crates/ctxk-cli/: Cargo.toml
crates/ctxk-cli/src/: main.rs
crates/ctxk-code/: Cargo.toml
crates/ctxk-code/src/: lib.rs  rust.rs  walker.rs
crates/ctxk-core/: Cargo.toml
crates/ctxk-core/src/: embed_trait.rs  error.rs  id.rs  lib.rs  schema.rs
crates/ctxk-embed/: Cargo.toml
crates/ctxk-embed/src/: lib.rs
crates/ctxk-retrieval/: Cargo.toml
crates/ctxk-retrieval/src/: bundle.rs  conflict.rs  lib.rs  query.rs  rerank.rs
crates/ctxk-server/: Cargo.toml
crates/ctxk-server/src/: lib.rs
crates/ctxk-server/src/routes/: context.rs  graph.rs  knowledge.rs  mod.rs  review.rs  vault.rs
crates/ctxk-server/templates/: graph.html
crates/ctxk-store/: Cargo.toml
crates/ctxk-store/src/: html_emit.rs  html_parse.rs  lib.rs  sqlite.rs  vault.rs
crates/ctxk-store/src/migrations/: 0001_init.sql  0002_embeddings.sql  0003_code_location.sql
examples/basic_vault/projects/demo/: constraints.html  facts.html  preferences.html
py/contextkernel/: README.md  pyproject.toml
py/contextkernel/contextkernel/: __init__.py  client.py  types.py
