[package]
name        = "ctxk-cli"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true
description = "ctxk command-line interface"

[[bin]]
name = "ctxk"
path = "src/main.rs"

[dependencies]
ctxk-core.workspace      = true
ctxk-store.workspace     = true
ctxk-embed.workspace     = true
ctxk-code.workspace      = true
ctxk-retrieval.workspace = true
ctxk-server   = { path = "../ctxk-server" }

clap = { workspace = true, features = ["env"] }
anyhow.workspace      = true
serde.workspace       = true
serde_json.workspace  = true
tokio.workspace       = true
tracing.workspace     = true
tracing-subscriber.workspace = true
