[package]
name        = "ctxk-retrieval"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true
description = "Query, rerank, conflict detection, and context-bundle assembly"

[dependencies]
ctxk-core.workspace  = true
ctxk-store.workspace = true
serde.workspace      = true
serde_json.workspace = true
time.workspace       = true
thiserror.workspace  = true
tracing.workspace    = true
