[package]
name        = "ctxk-server"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true
description = "HTTP server (axum) exposing ContextKernel to AI agents and clients"

[dependencies]
ctxk-core.workspace      = true
ctxk-store.workspace     = true
ctxk-embed.workspace     = true
ctxk-retrieval.workspace = true

axum.workspace        = true
tokio.workspace       = true
tower-http.workspace  = true
serde.workspace       = true
serde_json.workspace  = true
anyhow.workspace      = true
time.workspace        = true
tracing.workspace     = true
tracing-subscriber.workspace = true
ulid.workspace        = true
