[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name            = "contextkernel"
version         = "0.1.0"
description     = "Python SDK for the ContextKernel HTTP server"
readme          = "README.md"
requires-python = ">=3.10"
license         = { text = "MIT" }
authors         = [{ name = "sudo-KNO3" }]
dependencies    = [
    "httpx>=0.27",
    "pydantic>=2.7",
]

[project.urls]
Homepage = "https://github.com/sudo-KNO3/contextkernel"

[tool.setuptools.packages.find]
include = ["contextkernel*"]
